Cleanup: Spelling mistakes and add missing separator.

--- a/documentation.html
+++ b/documentation.html
@@ -180,7 +180,7 @@
           </article>
 
           <article class="article">
-            <header class="article-header header">
+            <header class="article-header header separate">
               <h2 class="article-title h h2">Specifications</h2>
             </header>
             <div class="article-content">
