--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               Update the website, bringing in my initial pass at the documentation for each of the programs provided by the <abbr title="Featureless Linux Library">FLL</abbr> project. Most of this documentation is copied from the help of each program and any improvements or deviations are incidental.
             </p>
             <p>
-              While working on the documentation, I discovered and fixed random problems. In particular, the <strong>iki_read</strong> program in the release candidate has a major regression where it doesn't do anything. This is the result of a very minor mistake in passing the wrong size variable to the file read functions. Essentialy, the <strong>iki_read</strong> program is only processing files of length 0 and as a result never produces any output. This is now fixed upstream and I am even happier with the practice of using release candidates.
+              While working on the documentation, I discovered and fixed random problems. In particular, the <strong>iki_read</strong> program in the release candidate has a major regression where it doesn't do anything. This is the result of a very minor mistake in passing the wrong size variable to the file read functions. Essentially, the <strong>iki_read</strong> program is only processing files of length 0 and as a result never produces any output. This is now fixed upstream and I am even happier with the practice of using release candidates.
             </p>
               <p>
                 <a href="news/2022_05_06-basic_program_documentation.html" class="content link">Continue reading…</a>
@@ -96,7 +96,7 @@
           </article>
 
           <article class="article">
-            <header class="article-header header">
+            <header class="article-header header separate">
               <h2 class="article-title h h2">2022 / 05 / 01 - Website Redesign</h2>
             </header>
             <div class="article-content">
