--- a/documentation/iki_read.html
+++ b/documentation/iki_read.html
@@ -237,15 +237,31 @@
                       <td class="column">Print the total number of variables.</td>
                     </tr>
                     <tr class="row">
+                      <td class="column"><code class="code">-r</code></td>
+                      <td class="column"><code class="code">--replace</code></td>
+                      <td class="column">Simple substitution, replacing the variable for the given name with the given string.</td>
+                    </tr>
+                    <tr class="row">
                       <td class="column"><code class="code">-s</code></td>
                       <td class="column"><code class="code">--substitute</code></td>
-                      <td class="column">Substitute the entire variable for the given name and content value with the given string.</td>
+                      <td class="column">Substitute the variable for the given name and matching content value with the given string.</td>
                     </tr>
                   </tbody>
                 </table>
               </div>
               <p>
-                This <code>-s/--substitute</code> option, requires 3 additional parameters: <code>&lt;vocabulary&gt; &lt;replace&gt; &lt;with&gt;</code>.
+                The <code>-r/--replace</code> option requires 2 additional parameters: <code>&lt;vocabulary&gt; &lt;with&gt;</code>.
+              </p>
+              <dl class="dl">
+                <div class="di">
+                  <dt class="dt">vocabulary</dt><dd class="dd">The name of the vocabulary whose content is to be substituted.</dd>
+                </div>
+                <div class="di">
+                  <dt class="dt">with</dt><dd class="dd">The new string to use as the substitute.</dd>
+                </div>
+              </dl>
+              <p>
+                The <code>-s/--substitute</code> option requires 3 additional parameters: <code>&lt;vocabulary&gt; &lt;replace&gt; &lt;with&gt;</code>.
               </p>
               <dl class="dl">
                 <div class="di">
@@ -260,6 +276,15 @@
               </dl>
               <p>
                 The <em>vocabulary</em> and <em>replacement</em> are case-sensitive and must exactly match.
+              </p>
+              <p>
+                The difference between <code>-r/--replace</code> and <code>-s/--substitute</code> is that the <code>-r/--replace</code> option substitutes all matching vocabulary names and the <code>-s/--substitute</code> option substitutes all matching vocabulary names that must also have the given matching content.
+              </p>
+              <p>
+                The <code>-s/--substitute</code> option takes priority over the <code>-r/--replace</code> option when matching the same variable.
+              </p>
+              <p>
+                The default behavior is to only display content portion of the IKI variable.
               </p>
             </div>
           </section>
