--- a/documentation/iki_read.html
+++ b/documentation/iki_read.html
@@ -219,7 +219,7 @@
                     <tr class="row">
                       <td class="column"><code class="code">-c</code></td>
                       <td class="column"><code class="code">--content</code></td>
-                      <td class="column">Print the variable content (default).</td>
+                      <td class="column">Print the variable value (aka: content) (default).</td>
                     </tr>
                     <tr class="row">
                       <td class="column"><code class="code">-L</code></td>
@@ -245,6 +245,11 @@
                       <td class="column"><code class="code">-s</code></td>
                       <td class="column"><code class="code">--substitute</code></td>
                       <td class="column">Substitute the variable for the given name and matching content value with the given string.</td>
+                    </tr>
+                    <tr class="row">
+                      <td class="column"><code class="code">-W</code></td>
+                      <td class="column"><code class="code">--wrap</code></td>
+                      <td class="column">Prepend and append strings for the given name.</td>
                     </tr>
                   </tbody>
                 </table>
@@ -278,10 +283,27 @@
                 The <em>vocabulary</em> and <em>replacement</em> are case-sensitive and must exactly match.
               </p>
               <p>
+                The <code>-W/--wrap</code> option requires 3 additional parameters: <code>&lt;vocabulary&gt; &lt;before&gt; &lt;after&gt;</code>.
+              </p>
+              <dl class="dl">
+                <div class="di">
+                  <dt class="dt">vocabulary</dt><dd class="dd">The name of the vocabulary whose content is to be wrapped.</dd>
+                </div>
+                <div class="di">
+                  <dt class="dt">before</dt><dd class="dd">The string to prepend.</dd>
+                </div>
+                <div class="di">
+                  <dt class="dt">after</dt><dd class="dd">The string to append.</dd>
+                </div>
+              </dl>
+              <p>
                 The difference between <code>-r/--replace</code> and <code>-s/--substitute</code> is that the <code>-r/--replace</code> option substitutes all matching vocabulary names and the <code>-s/--substitute</code> option substitutes all matching vocabulary names that must also have the given matching content.
               </p>
               <p>
                 The <code>-s/--substitute</code> option takes priority over the <code>-r/--replace</code> option when matching the same variable.
+              </p>
+              <p>
+                The <code>-W/--wrap</code> option is ignored when the <code>-s/--substitute</code> option is matching the same variable.
               </p>
               <p>
                 The default behavior is to only display content portion of the IKI variable.
